<?xml version="1.0"?>
<package format="2">
  <name>ros_utils</name>
  <version>0.0.0</version>
  <description>The ros_utils package</description>

  <maintainer email="amsl@todo.todo">amsl</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
